# hnn

./: .gitmodules  LICENSE  README.md  hnn.cabal  stack.yaml
examples/mnist/: Main.hs
src/: HNN.hs
src/HNN/: Data.hs  Init.hs  Layers.hs  NN.hs  Optimize.hs  Tensor.hs  TypeUtils.hs
src/HNN/Internal/: Cubits.hsc
src/HNN/Layers/: Internal.hs
src/HNN/NN/: Mutable.hs
src/HNN/Optimize/: Momentum.hs  Vanilla.hs
src/HNN/Tensor/: Internal.hs  Mutable.hs
src/HNN/Tensor/Mutable/: Internal.hs
test/: Spec.hs
test/Test/HNN/: Layers.hs  NumericGrad.hs
test/Test/HNN/NN/: Mutable.hs  NumericGrad.hs
