name:                hnn
version:             0.1.0.0
synopsis:            GPU neural network library.
description:         Please see README.md
homepage:            https://github.com/alexisVallet/hnn
license:             BSD3
license-file:        LICENSE
author:              Alexis Vallet
maintainer:          alexis.vallet@gmail.com
-- copyright:           
category:            Machine learning
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HNN
                     , HNN.Tensor.Mutable
                     , HNN.NN.Mutable
                     , HNN.Tensor
                     , HNN.NN
                     , HNN.Layers
  other-modules:       HNN.Tensor.Internal
                     , HNN.Tensor.Mutable.Internal
  build-depends:       base >= 4.7 && < 5
                     , cuda >= 0.6.5 && < 0.7
                     , hcudnn >= 0.1 && < 0.2
                     , mtl >= 2.1 && < 2.3
                     , primitive >= 0.6 && < 0.7
                     , lens >= 4.7 && < 5
                     , cublas >= 0.2.1 && < 0.3
  default-language:    Haskell2010

test-suite hnn-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base >= 4.7 && < 5
                     , hnn >= 0.1 && < 0.2
                     , hcudnn >= 0.1 && < 0.2
                     , hspec >= 2.1 && < 2.2
                     , QuickCheck >= 2.5.1
                     , cublas >= 0.2.1 && < 0.3
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/alexisVallet/hnn
